--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main class="cards">
       <section class="card">
         <div class="card-header">
-          <img src="/assets/blog-post-1.jpeg" alt="Blog Post" />
+          <img src="./assets/blog-post-1.jpeg" alt="Blog Post" />
         </div>
         <div class="card-body">
           <div class="card-content">
@@ -62,7 +62,7 @@
       </section>
       <section class="card">
         <div class="card-header">
-          <img src="/assets/blog-post-2.jpeg" alt="Blog Post" />
+          <img src="./assets/blog-post-2.jpeg" alt="Blog Post" />
         </div>
         <div class="card-body">
           <div class="card-content">
@@ -83,7 +83,7 @@
       </section>
       <section class="card">
         <div class="card-header">
-          <img src="/assets/blog-post-3.jpeg" alt="Blog Post" />
+          <img src="./assets/blog-post-3.jpeg" alt="Blog Post" />
         </div>
         <div class="card-body">
           <div class="card-content">
@@ -104,7 +104,7 @@
       </section>
       <section class="card">
         <div class="card-header">
-          <img src="/assets/blog-post-4.jpeg" alt="Blog Post" />
+          <img src="./assets/blog-post-4.jpeg" alt="Blog Post" />
         </div>
         <div class="card-body">
           <div class="card-content">
@@ -125,7 +125,7 @@
       </section>
       <section class="card">
         <div class="card-header">
-          <img src="/assets/blog-post-5.jpeg" alt="Blog Post" />
+          <img src="./assets/blog-post-5.jpeg" alt="Blog Post" />
         </div>
         <div class="card-body">
           <div class="card-content">
@@ -146,7 +146,7 @@
       </section>
       <section class="card">
         <div class="card-header">
-          <img src="/assets/blog-post-6.jpeg" alt="Blog Post" />
+          <img src="./assets/blog-post-6.jpeg" alt="Blog Post" />
         </div>
         <div class="card-body">
           <div class="card-content">
@@ -167,7 +167,7 @@
       </section>
       <section class="card">
         <div class="card-header">
-          <img src="/assets/blog-post-7.jpeg" alt="Blog Post" />
+          <img src="./assets/blog-post-7.jpeg" alt="Blog Post" />
         </div>
         <div class="card-body">
           <div class="card-content">
